--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
-# Compiled class file
-*.class
+node_modules
 
-# Log file
-*.log
+config.env
 
-# BlueJ files
-*.ctxt
+.cache
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+docs
