--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -53,11 +54,13 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
+    "influx": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.6.2",
+    "mqtt": "^5.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
     "password-validator": "^5.3.0",
