refactoring user-models+controllers+routers

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
     "password-validator": "^5.3.0",
+    "phone": "^3.1.41",
     "sharp": "^0.32.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
