--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "@babel/traverse": "^7.23.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -61,6 +62,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
     "password-validator": "^5.3.0",
+    "phone": "^3.1.41",
     "sharp": "^0.32.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
