--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
+    "start:prod": "nodemon NODE_ENV=production server.js",
     "test": "cross-env NODE_ENV=test jest --testTimeout=15000 --detectOpenHandles"
   },
   "repository": {
