--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "@babel/traverse": "^7.23.2",
     "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.5.1",
-    "@babel/traverse": "^7.23.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -70,6 +70,7 @@
     "password-validator": "^5.3.0",
     "phone": "^3.1.41",
     "sharp": "^0.32.6",
+    "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^4.19.0",
