--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.1",
+    "google-auth-library": "^9.2.0",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
